[package]
name = "crc_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["cargo"] }
crc = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
